mockup/css/style.css
/* ... */
.sidebar-container_left {
  background: rgb(53,55,54);
  height: 100%;
  overflow: scroll;
}
#sidebar-container.show{
  top: 0px;
  height: 100%;
  width: 100%;
  left: 0px;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

}
@media screen and (min-width: 600px){
  #sidebar-container {
    top: 50px;
    z-index: 30;
    box-shadow: 0 0 6px rgba(0,0,0,.16),0 6px 12px rgba(0,0,0,.32);
    padding-right: 0px;
  }
  #sidebar-container.show{
    width: 250px;
    top: 50px;
  }
  #sidebar-shadow {
    display: none;
  }
}
#sidebar-container--top {
  width: 100%;
  padding-right: 50px;
  height: 100%;
  top: 0px;
  left: -100%;
  overflow: scroll;
  position: absolute;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

}
#sidebar-container--top.show {
  width: 100%;
  left: 0px;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;


}
#sidebar-container--down {
  width: 100%;
  padding-right: 50px;
  height: 100%;

  bottom: -100%;

  overflow: scroll;
  position: absolute;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;


}
#sidebar-container--down.show {

  width: 100%;
  bottom: 0px;
  padding-right: 50px;
  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

}
#focus-discussion{
  z-index: 500;
  background: white;
  position: absolute;
  text-align: center;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;

  /* [transition-property] [transition-duration] [transition-timing-function] [transition-delay] */

  overflow: scroll;
  height: 100%;
  width: 0px;
  top:0px;
  right: -100%;
  background: rgb(247,247,247);

}

#focus-discussion.show{
  top: 0px;
  height: 100%;
  overflow: scroll;
  right: 0px;
  width: 100%;

  -webkit-transition: right .5s ease-in-out;
  transition: right .5s ease-in-out;

}

.q_content_nav {
  width: 100%;
  height: 50px;
  background: rgb(63,159,155);
  color: white;
  z-index: 400;
}
.q_content_nav.show {
  position: fixed;

  -moz-transition: .2s;
  -ms-transition: .2s;
  -webkit-transition: .2s;
  transition: .2s;
  transition-duration: .5s;
}
.q_content_nav_remove {
  display: inline-block;
  position: absolute;
  left: 20px;
  top: 5px;
  padding-top: 8px;
  font-size: 20px;
  color: white;
  cursor: pointer;
  width:40px;
  height:40px;
  text-align: center;
}
.q_content_nav_remove:hover {
  background: rgba(0,0,0,0.1);
  border-radius: 50%;

}

a.nav_item_sidebar {
  display: block;
  padding: 10px;
  color: #3F51B5;
  text-align: left;
  cursor: pointer;
}
a.nav_item_sidebar--right {
  border-bottom: 1px solid rgb(240,240,240);
  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
}
a.nav_item_sidebar--inner {
  color: rgb(53,55,54);
}

a.nav_item_sidebar--left {
  display: block;
  padding: 12px;
  height: 50px;
  color: rgb(247,247,247);
  background-color: #255;

  font-size: 18px;
  font-weight: 700;

  border-bottom: 1px solid rgb(100,100,100);
  text-align: left;
  cursor: pointer;
}
a.nav_item_sidebar--bold {
  display: block;
  padding: 12px;
  height: 50px;
  font-size: 18px;
  color: rgb(53,55,54);
  background: rgb(220,220,220);
  /* border-left: 5px solid rgb(53,55,54); */
  text-align: left;
  cursor: pointer;
  font-weight: 700;


}
a.nav_item_sidebar--half {
  display: inline-block;
  width: 48%;
  height: 60px;
  padding: 20px;
  box-sizing: border-box;
  text-align: center;

}

a.nav_item_sidebar--sub {

  display: block;
  padding: 12px;
  min-height: 50px;

  color: rgb(247,247,247);

  background: rgb(53,55,54);

  border-bottom: 1px solid rgb(100,100,100);
  text-align: left;
  cursor: pointer;
  padding-left: 20px;
  position: relative;
}
.nav_item_sidebar--switchmenu {
  width: 50px;
  padding: 14px;
  height: 50px;
  text-align: center;
  display: block;
  color: rgb(220,220,220);
  /* background: rgb(220,220,220); */

  position: absolute;
  right: 0px;
  top: 0px;
}

/* Required for Triangle */
.tri-up:before, .tri-up:after {
  content: "";
  position: absolute;
  right: -3px;
  width: 0;
  height: 0;
  border-style: solid;
  border-color: transparent;
  border-bottom: 0;
  z-index: 420;
}
/* Stroke */
.tri-up:before {
  top: 43px;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid transparent;
  }
/* Fill */
.tri-up:after {
  top: 42px;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid white;
}
#site_logo {
  padding: 5px;
  height: 50px;
  cursor: pointer;
}
#site_logo_img {
  width: 40px;
}
#site_logo_text {
  display: inline-block;
  vertical-align: top;
  padding: 8px 2px;
  font-weight: 800;
  font-size: 20px;
  color: rgb(53,55,54);
}
#site_logo_text, .logo {
  font-family: 'Gentium Basic', 'Gentium', serif;
  display: inline-block;
}
#site_logo_text::first-letter, .logo::first-letter {
  margin-right: 1px;
}
.nav_left_toggle {
  position: absolute;
  cursor: pointer;
  top: 5px;
  padding-top: 10px;
  left: 5px;
  z-index: 10;
  width:40px;
  height:40px;
}
.nav_left_toggle:hover {
  background: rgba(0,0,0,0.1);
  border-radius: 50%;

}
.nav_list_book {
  position: absolute;
  cursor: pointer;
  top: 14px;
  left: 60px;
  z-index: 10;

}

.nav_list_function {
  position: absolute;
  top: 0px;
  right: 10px;

}
.nav_list_function_item {
  height: 50px;
  box-sizing: border-box;
  vertical-align: top;
  position: relative;
  width: 130px;
}
.nav_list_function_item_user {
  height: 50px;
  box-sizing: border-box;
  vertical-align: top;
  position: relative;

}
/* ... */

